Added JQ for Centos
- added EPEL repository
- added JQ package

--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -1,2 +1,10 @@
 ---
 # tasks file for jq (CentOS specific)
+
+- name: enable EPEL Repository
+  yum: name=epel-release
+       state=present
+       
+- name: install JQ
+  yum: name=jq
+       state=present
